--- a/index.html
+++ b/index.html
@@ -27,20 +27,32 @@
             }
 
             #headerContent{
-                width: 100vws;
+                width: 100vw;
                 height: 100%;
             }
 
             #headerContent > h1{
                 position: relative;
                 font-family: 'Londrina Outline', cursive;
-                font-size: 50px;
+                font-size: 4vw;
                 left: 1%;
+                padding-right: 20vw;
             }
 
-            #heroImage{
-                background-image: ;
+            #headerLinks{
+                position: absolute;
+                right: 0px;
+                top: 0px;
             }
+
+            #headerLinks > a{
+                display: flex;
+                font-family: 'Londrina Outline', cursive;
+                font-size: 4vw;
+                float: left;
+                padding-right: 4vw;
+            }
+
         </style>
     </head>
     <body>
@@ -48,6 +60,11 @@
             <div id = "header">
                 <div id = "headerContent">
                     <h1>Jay Kittler</h1>
+                    <div id = "headerLinks">
+                        <a>Family & Friends</a>
+                        <a>Projects</a>
+                        <a>Page3</a>
+                    </div>
                 </div>
             </div>
             <div id = "heroImage"></div>
